data/Java/12-incomp-string-int/1/[M]Error.txt
http://cs-people.bu.edu/dgs/courses/cs111-old/assignments/errors.html
Test.java:3: error: incompatible types: 'String' cannot be converted to 'int'
        int num = "500";
                  ^